Sat Feb  1 06:04:56 2014  Zachary Scott  <e@zzak.io>

	* numeric.c: [DOC] Fix typo in example for #step [ci skip]
	  Patch by @ksss [Fixes GH-522] https://github.com/ruby/ruby/pull/522

Fri Jan 31 17:01:47 2014  Eric Wong <e@80x24.org>

	* ext/socket/init.c (rsock_socket0): split out SOCK_CLOEXEC version
	* ext/socket/socket.c (rsock_socketpair0): ditto
	  [ruby-core:60377]

Fri Jan 31 03:48:40 2014  Eric Wong <e@80x24.org>

	* benchmark/driver: avoid large alloc in driver process
	  [ruby-core:59869] [Bug #9430]

Thu Jan 30 14:45:49 2014  Shugo Maeda  <shugo@ruby-lang.org>

	* configure.in: use $@ instead of $(.TARGET) because .TARGET is not
	  supported by GNU make.

Thu Jan 30 08:26:21 2014  Yusuke Endoh  <mame@tsg.ne.jp>

	* ext/fiddle/closure.c: use sizeof(*pcl) for correct sizeof value.
	  [ruby-core:57599] [Bug #8978].

Wed Jan 29 20:08:15 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* io.c (nogvl_copy_stream_sendfile): check socket on other than
	  linux, as sendfile(2) on non-socket fd works only on linux.
	  [Feature #9427]

Wed Jan 29 18:09:48 2014  Eric Wong <e@80x24.org>

	* io.c (nogvl_copy_stream_sendfile): remove socket check
	  [ruby-core:59856][Feature #9427]

Wed Jan 29 04:29:54 2014  Aaron Patterson <aaron@tenderlovemaking.com>

	* ext/openssl/ossl_ssl.c: pass read_nonblock options to underlying IO
	  when SSL session has not been started.

	* test/openssl/test_ssl.rb: test for change.

Wed Jan 29 03:49:36 2014  Aaron Patterson <aaron@tenderlovemaking.com>

	* ext/fiddle/closure.c: use sizeof(*pcl) for correct sizeof value.
	  [ruby-core:57599] [Bug #8978].  Thanks mame!

Wed Jan 29 03:36:42 2014  Eric Wong <e@80x24.org>

	* doc/contributing.rdoc: allow/encourage other git hosts
	  [ruby-core:59807][misc #9421]

Tue Jan 28 23:36:01 2014  Tanaka Akira  <akr@fsij.org>

	* ext/socket: Avoid redundant fcntl/fstat syscalls for cloexec
	  sockets.
	  Patch by Eric Wong.  [ruby-core:59429] [Feature #9330]
